@@ -46,6 +46,7 @@ ideas for future versions:
   [ ] json export: determining if statemachine_context - is a good guess but not 100% correct
   [ ] add test case for opening non-cfuJ files
   [ ] in json format, types shall be unique and self-explaining instead of uml/sysml compliant
+  [ ] remove the limitation on max appearance-links: DOCUMENT_LINK_PROVIDER_MAX_LINKS
   @data
   [ ] some diagrams exist for completeness only - but do not contain important information. These shall be greyed out.
       --> use the "display_flags" field of "diagrams"
