@@ -5,6 +5,7 @@ crystal-facet-uml (1.63.2) UNRELEASED; urgency=medium
   * too short relationships are weighted by additional dept
     layout_good_cases        ERR=0,  W/C=8,    W/F=1,   W/L=25,   W/R=61
     layout_challenging_cases ERR=39, W/C=9751, W/F=503, W/L=6720, W/R=7636
+  * exported cross-references D0001#id work even if many characters follow
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 01 May 2025 08:00:00 +0100
 
